--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "class-26-solution",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "name": "resty-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "node-sass": "^6.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-jsonschema-form": "1.8.1",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "sass": "^1.41.1",
+    "web-vitals": "^1.1.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
